testsuite/tests/grammar/invalid_unparser/toplevel-pick.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- pick("example" Root(item))
    item <- or(Identifier(@Identifier) | Number(@Number))
}
